<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_KNX_GroupAddress" Id="{95279bb3-7723-40fc-bfce-0df579afa631}">
    <Declaration><![CDATA[TYPE ST_KNX_GroupAddress :
STRUCT
	nFirst			: UINT;			// first number of group address 1/x/x
	nMiddle			: UINT;			// second number of group address x/1/x
	nLow			: UINT;			// third number of group address x/x/1
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>